--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
       <script src="build/js/vendor.min.js"></script>
       <script src="bower_components/moment/min/moment.min.js"></script>
       <script type="text/javascript" src="build/js/app.js"></script>
-    <title>Something</title>
+    <title>Sweeney's JS Code Review</title>
   </head>
   <body>
+    <header class="jumbotron center">
+      <h1>Github User Search</h1>
+    </header>
     <div class="container">
-      <div class="jumbotron">
+      <div class="row">
+        <div class="col-xs-4">
+          <form id="search-user">
+            <label for="user_name">Enter a Github User Name:</label>
+            <input id="user_name" type="text">
+            <button class="btn-success" id="submit_user_name">Search</button>
+          </form>
+        </div>
       </div>
     </div>
   </body>
