--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
     </header>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4">
-          <form id="search-user">
+        <div id="form" class="col-xs-4">
+          <form id="search_user">
             <label for="user_name">Enter a Github User Name:</label>
             <input id="user_name" type="text">
             <button class="btn-success" id="submit_user_name">Search</button>
           </form>
+        </div>
+        <div id="results" class="col-md-8">
+          <div id="avatar" class="">
+
+          </div>
         </div>
       </div>
     </div>
