add avatar to index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </form>
         </div>
         <div id="results" class="col-md-8">
-          <div id="avatar" class="">
+          <div id="avatar_image" class="">
 
           </div>
         </div>
