--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
           </form>
         </div>
         <div id="results" class="col-md-8">
-          <div id="avatar_image" class="">
-
+            <div id="avatar_image"></div>
+            <h3 id="display_name" class=""></h3>
+            <p id="login"></p>
           </div>
         </div>
       </div>
