--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="results" class="col-md-8">
             <div id="avatar_image"></div>
             <h3 id="display_name" class=""></h3>
-            <p id="login"></p>
+            <p id="display_login"></p>
           </div>
         </div>
       </div>
