--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <div id="avatar_image"></div>
             <h3 id="display_name" class=""></h3>
             <p id="display_login"></p>
+            <h4 id="display_num_repos"></h4>
+            <div id="display_repo_url"></div>
           </div>
         </div>
       </div>
