list out 30 repositories as links

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           </form>
         </div>
         <div id="results" class="col-md-3">
-            <div id="avatar_image"></div>
-            <h3 id="display_name" class=""></h3>
-            <p id="display_login"></p>
-            <h4 id="display_num_repos"></h4>
-            <div id="display_repo_url"></div>
-          </div>
+          <div id="avatar_image"></div>
+          <h3 id="display_name" class=""></h3>
+          <p id="display_login"></p>
+          <h4 id="display_num_repos"></h4>
+          <div id="display_repo_url"></div>
         </div>
+        <div id="repo_links" class="col-md-5"></div>
       </div>
     </div>
   </body>
