add time joined

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <div id="avatar_image"></div>
           <h3 id="display_name" class=""></h3>
           <p id="display_login"></p>
+          <p id="display_created_at"></p>
           <h4 id="display_num_repos"></h4>
           <div id="display_repo_url"></div>
         </div>
