--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <h3 id="display_name" class=""></h3>
           <p id="display_login"></p>
           <p id="display_created_at"></p>
+          <p id="display_location"></p>
           <h4 id="display_num_repos"></h4>
           <div id="display_repo_url"></div>
         </div>
