add css to form

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div class="row">
         <div id="form" class="col-xs-4">
           <form id="search_user">
-            <label for="user_name">Enter a Github User Name:</label>
-            <input id="user_name" type="text">
+            <label for="user_name">Enter a Github User Name:</label><br>
+            <input id="user_name" type="text"><br>
             <button class="btn-success" id="submit_user_name">Search</button>
           </form>
         </div>
