--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     </header>
     <div class="container">
       <div class="row">
-        <div id="form" class="col-xs-4">
+        <div id="form" class="col-xs-3">
           <form id="search_user">
             <label for="user_name">Enter a Github User Name:</label><br>
             <input id="user_name" type="text"><br>
             <button class="btn-success" id="submit_user_name">Search</button>
           </form>
         </div>
-        <div id="results" class="col-md-3">
+        <div id="results" class="col-md-4">
           <div id="avatar_image"></div>
-          <h3 id="display_name" class=""></h3>
+          <h3 id="display_name"></h3>
           <p id="display_login"></p>
           <p id="display_created_at"></p>
           <p id="display_location"></p>
